# enm_learning_aid

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
src/: R3Vectors.cpp  R3Vectors.h  bField.hpp  b_field.cpp  b_field.h  disk.hpp  drawing.cpp  drawing.h  drawing.hpp  edgeEffects.hpp  main.cpp  math.h  pointCharge.hpp  point_charge.cpp  point_charge.h  rod.hpp  textbox.hpp  vectorR3.hpp  vertexWire.hpp
test/: CMakeLists.txt  testing.cpp
tgui/TGUI-1.6/cmake/: Config.cmake
tgui/TGUI-1.6/cmake/Modules/: FindSDL2.cmake  FindSDL2_ttf.cmake  Findglfw3.cmake
tgui/TGUI-1.6/cmake/gui-builder/: tgui-gui-builder.desktop.in
tgui/TGUI-1.6/cmake/pkgconfig/: tgui.pc.in
tgui/TGUI-1.6/doc/: custom.css  mainpage.hpp
tgui/TGUI-1.6/doc/html/: _absolute_or_relative_value_8hpp_source.html  _all_widgets_8hpp_source.html  _animation_8hpp_source.html  _any_8hpp_source.html  _backend_8hpp_source.html  _backend_font_8hpp_source.html  _backend_font_factory_8hpp_source.html  _backend_font_free_type_8hpp_source.html  _backend_font_raylib_8hpp_source.html  _backend_font_s_d_lttf_8hpp_source.html  _backend_font_s_f_m_l_8hpp_source.html  _backend_g_l_f_w_8hpp_source.html  _backend_gui_8hpp_source.html  _backend_gui_g_l_f_w_8hpp_source.html  _backend_gui_raylib_8hpp_source.html  _backend_text_8hpp_source.html  (+705 more)
tgui/TGUI-1.6/examples/: CMakeLists.txt
tgui/TGUI-1.6/gui-builder/: CMakeLists.txt
tgui/TGUI-1.6/lib/: tgui-d.lib  tgui.lib
tgui/TGUI-1.6/src/: Base64.cpp  TGUI-Main-Module.cppm.in  WindowsIMM.cpp
tgui/TGUI-1.6/themes/: TransparentGrey.txt
(+215 files in other folders)
