cmake_minimum_required(VERSION 3.16)
project(enm_learning_aid)
include(FetchContent)
FetchContent_Declare(SFML GIT_REPOSITORY https://github.com/SFML/SFML.git GIT_TAG 2.6.x)
FetchContent_MakeAvailable(SFML)
add_executable(enm_learning_aid src/main.cpp)
target_link_libraries(enm_learning_aid PUBLIC sfml-graphics sfml-window sfml-system)